--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==7.1.2
 dnspython==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 email-validator==1.1.3
 eventlet==0.30.2
+flask-avatars==0.2.2
 flask-cors==3.0.8
 flask-login==0.5.0
 flask-migrate==3.0.1
@@ -26,6 +27,7 @@ itsdangerous==2.0.1
 jinja2==3.0.1
 mako==1.1.4
 markupsafe==2.0.1
+pillow==8.4.0; python_version >= '3.6'
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
