--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ FLASK_ENV=development
 SECRET_KEY=6x08c3ZmsTE7UArONSpKYgkHNM6cdORafOOHQJFM0Ow
 DATABASE_URL=postgresql://depthchart:oompaforlife/depthchart_app
 S3_BUCKET_NAME=fantasydepthchart
-S3_ACCESS_KEY=
-S3_SECRET_ACCESS_KEY=
+S3_ACCESS_KEY=AKIA2QSCVEUVY2NVKZNZ
+S3_SECRET_ACCESS_KEY=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
