--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ flask-socketio = "*"
 eventlet = "==0.30.2"
 email-validator = "*"
 flask-avatars = "*"
+boto3 = "*"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
