--- a/Pipfile
+++ b/Pipfile
@@ -25,12 +25,23 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 greenlet = "==1.1.0"
 Mako = "==1.1.4"
-flask-socketio = "*"
 eventlet = "==0.30.2"
-email-validator = "*"
-flask-avatars = "*"
-boto3 = "*"
-faker = "*"
+email-validator = "==1.1.3"
+boto3 = "==1.20.7"
+Flask-SocketIO = "==5.1.1"
+Flask-Avatars = "==0.2.2"
+Faker = "==9.8.2"
+bidict = "==0.21.4"
+botocore = "==1.23.7"
+dnspython = "==1.16.0"
+idna = "==3.3"
+jmespath = "==0.10.0"
+python-engineio = "==4.3.0"
+python-socketio = "==5.5.0"
+s3transfer = "==0.5.0"
+text-unidecode = "==1.3"
+urllib3 = "==1.26.7"
+Pillow = "==8.4.0"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
