--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@
 
 -i https://pypi.org/simple
 alembic==1.6.5
-bidict==0.21.4; python_version >= '3.6'
+bidict==0.21.4
 boto3==1.20.7
-botocore==1.23.7; python_version >= '3.6'
+botocore==1.23.7
 click==7.1.2
-dnspython==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+dnspython==1.16.0
 email-validator==1.1.3
 eventlet==0.30.2
 faker==9.8.2
@@ -25,22 +25,22 @@ flask-wtf==0.15.1
 flask==2.0.1
 greenlet==1.1.0
 gunicorn==20.1.0
-idna==3.3; python_version >= '3.5'
+idna==3.3
 itsdangerous==2.0.1
 jinja2==3.0.1
-jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+jmespath==0.10.0
 mako==1.1.4
 markupsafe==2.0.1
-pillow==8.4.0; python_version >= '3.6'
+pillow==8.4.0
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
-python-engineio==4.3.0; python_version >= '3.6'
-python-socketio==5.5.0; python_version >= '3.6'
-s3transfer==0.5.0; python_version >= '3.6'
+python-engineio==4.3.0
+python-socketio==5.5.0
+s3transfer==0.5.0
 six==1.15.0
 sqlalchemy==1.4.19
 text-unidecode==1.3
-urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.7
 werkzeug==2.0.1
 wtforms==2.3.3
