--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "formik": "^2.2.9",
         "http-proxy-middleware": "^1.0.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -18,7 +19,8 @@
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
         "socket.io-client": "^4.3.2",
-        "styled-components": "^5.3.3"
+        "styled-components": "^5.3.3",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
