--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "core-js": "^3.19.1",
         "formik": "^2.2.9",
         "http-proxy-middleware": "^1.0.5",
         "react": "^17.0.2",
