npm install and added way to generate key to env example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=secretkey
 DATABASE_URL=postgresql://username:password@localhost/databaseName
+
+# $ openssl rand -base64 32
+# $ openssl rand -base64 64
