added helpful terminal lines to .env example

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DATABASE_URL=postgresql://username:password@localhost/databaseName
 
 # $ openssl rand -base64 32
 # $ openssl rand -base64 64
+# pipenv install --dev -r dev-requirements.txt && pipenv install -r requirements.txt
+# pipenv lock -r > requirements.txt
