--- a/react-app/babel.config.json
+++ b/react-app/babel.config.json
@@ -16,6 +16,7 @@
         "@babel/preset-react"
     ],
     "plugins": [
-        "babel-plugin-styled-components"
+        "babel-plugin-styled-components",
+        "@babel/plugin-proposal-export-default-from"
     ]
 }
