--- a/react-app/package.json
+++ b/react-app/package.json
@@ -21,6 +21,7 @@
         "redux-thunk": "^2.3.0",
         "socket.io-client": "^4.3.2",
         "styled-components": "^5.3.3",
+        "validator": "^13.7.0",
         "yup": "^0.32.11"
     },
     "scripts": {
