--- a/Pipfile
+++ b/Pipfile
@@ -43,7 +43,7 @@ urllib3 = "==1.26.7"
 Pillow = "==8.4.0"
 
 [dev-packages]
-psycopg2-binary = "==2.8.6"
+psycopg2 = "*"
 
 [requires]
 python_full_version = "3.9.4"
