--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-symbols/svg-400": "^0.2.8",
         "@mdi/js": "^6.5.95",
         "@mdi/react": "^1.5.0",
         "@testing-library/jest-dom": "^5.14.1",
@@ -12,12 +13,14 @@
         "dotenv": "^16.0.0",
         "formik": "^2.2.9",
         "http-proxy-middleware": "^1.0.5",
+        "material-components-web": "^14.0.0",
+        "material-symbols": "^0.2.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^5.0.1",
+        "react-scripts": "^2.1.3",
         "redux": "^4.1.0",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
@@ -29,6 +32,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "build-dictionary": "style-dictionary build --config ./style-dictionary/config.json",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint:css": "stylelint './src/**/*.js'",
@@ -53,16 +57,26 @@
     "proxy": "http://localhost:5000",
     "devDependencies": {
         "@babel/cli": "^7.16.0",
-        "@babel/core": "^7.16.0",
+        "@babel/core": "^7.18.13",
         "@babel/plugin-proposal-export-default-from": "^7.16.7",
-        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-env": "^7.18.10",
         "@babel/preset-react": "^7.16.0",
         "@stylelint/postcss-css-in-js": "^0.37.2",
+        "@svgr/webpack": "^6.3.1",
+        "autoprefixer": "^10.4.8",
+        "babel-loader": "^8.2.5",
         "babel-plugin-styled-components": "^1.13.3",
+        "css-loader": "^6.7.1",
         "dotenv-quokka-plugin": "^1.0.0",
+        "extract-loader": "^5.1.0",
+        "file-loader": "^6.2.0",
         "postcss-jsx": "^0.36.4",
+        "postcss-loader": "^7.0.1",
         "postcss-styled": "^0.34.0",
         "postcss-syntax": "^0.36.2",
+        "sass": "^1.54.5",
+        "sass-loader": "^13.0.2",
+        "style-dictionary": "^3.7.1",
         "stylelint": "^14.3.0",
         "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-recommended": "^6.0.0",
@@ -70,6 +84,10 @@
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-css-modules": "^1.2.1",
         "stylelint-prettier": "^2.0.0",
-        "stylelint-processor-styled-components": "^1.10.0"
+        "stylelint-processor-styled-components": "^1.10.0",
+        "svgo": "^2.8.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.10.0"
     }
 }
